Animations, minor logic fixes refactoring

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -29,26 +29,26 @@
                         </p>
                     </figcaption>
                     <article class="grid grid-cols-2 w-full h-full px-5 gap-1 ">
-                        <figure class="flex justify-between items-center gap-1 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-1 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_feels_like %>
                             </figcaption>
                             <div>
-                                <%= data_daily.feels_like.day.toFixed(0)%>°<span class="text-xs font-title"><%= unit_symbols.unit_degree%></span>
+                                <%= data_daily.feels_like.day.toFixed(0)%>°<span class="text-[9px] font-title"><%= unit_symbols.unit_degree%></span>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_dew_point %>
                             </figcaption>
                             <div>
-                                <%= data_daily.dew_point.toFixed(0)%>°<span class="text-xs font-title"><%= unit_symbols.unit_degree%></span>
+                                <%= data_daily.dew_point.toFixed(0)%>°<span class="text-[9px] font-title"><%= unit_symbols.unit_degree%></span>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_pressure %>
                             </figcaption>
@@ -58,7 +58,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_wind_speed %>
                             </figcaption>
@@ -68,7 +68,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_humidity %>
                             </figcaption>
@@ -78,7 +78,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_wind_gust%>
                             </figcaption>
@@ -88,7 +88,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_uv%>
                             </figcaption>
@@ -98,7 +98,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_clouds%>
                             </figcaption>
@@ -131,26 +131,26 @@
                         </p>
                     </figcaption>
                     <article class="grid grid-cols-2 w-full h-full px-5 gap-1 ">
-                        <figure class="flex justify-between items-center gap-1 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-1 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_feels_like %>
                             </figcaption>
                             <div>
-                                <%= data_tonight.feels_like.toFixed(0)%>°<span class="text-xs font-title"><%= unit_symbols.unit_degree%></span>
+                                <%= data_tonight.feels_like.toFixed(0)%>°<span class="text-[9px] font-title"><%= unit_symbols.unit_degree%></span>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_dew_point %>
                             </figcaption>
                             <div>
-                                <%= data_tonight.dew_point.toFixed(0)%>°<span class="text-xs font-title"><%= unit_symbols.unit_degree%></span>
+                                <%= data_tonight.dew_point.toFixed(0)%>°<span class="text-[9px] font-title"><%= unit_symbols.unit_degree%></span>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_pressure %>
                             </figcaption>
@@ -160,7 +160,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_wind_speed %>
                             </figcaption>
@@ -170,7 +170,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_humidity %>
                             </figcaption>
@@ -180,7 +180,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_wind_gust%>
                             </figcaption>
@@ -190,7 +190,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_uv%>
                             </figcaption>
@@ -200,7 +200,7 @@
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
                         </figure>
-                        <figure class="flex justify-between items-center gap-2 p-1 text-xs sm:text-base relative">
+                        <figure class="flex justify-between items-center gap-2 p-1 text-[9.5px] sm:text-base relative">
                             <figcaption>
                                 <%= language.details_clouds%>
                             </figcaption>
@@ -214,8 +214,8 @@
         </article>
         <article class="h-56 sm:h-72 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
             <figure class="flex justify-around px-3 py-2 shadow-md text-sm sm:text-xl">
-                <figcaption class="font-title font-normal"><%= language.details_sun %></figcaption>
-                <figcaption class="font-title font-normal"><%= language.details_moon %></figcaption>
+                <figcaption class="font-title font-normal text-sm sm:text-xl"><%= language.details_sun %></figcaption>
+                <figcaption class="font-title font-normal text-sm sm:text-xl"><%= language.details_moon %></figcaption>
             </figure>
                 <% 
                 let unix_timestamp_sun_rise = data.daily[0].sunrise
@@ -236,7 +236,7 @@
                                 <path fill="#ff7a00"
                                     d="M120 40V16a8 8 0 0 1 16 0v24a8 8 0 0 1-16 0m72 88a64 64 0 1 1-64-64a64.07 64.07 0 0 1 64 64m-16 0a48 48 0 1 0-48 48a48.05 48.05 0 0 0 48-48M58.34 69.66a8 8 0 0 0 11.32-11.32l-16-16a8 8 0 0 0-11.32 11.32Zm0 116.68l-16 16a8 8 0 0 0 11.32 11.32l16-16a8 8 0 0 0-11.32-11.32ZM192 72a8 8 0 0 0 5.66-2.34l16-16a8 8 0 0 0-11.32-11.32l-16 16A8 8 0 0 0 192 72m5.66 114.34a8 8 0 0 0-11.32 11.32l16 16a8 8 0 0 0 11.32-11.32ZM48 128a8 8 0 0 0-8-8H16a8 8 0 0 0 0 16h24a8 8 0 0 0 8-8m80 80a8 8 0 0 0-8 8v24a8 8 0 0 0 16 0v-24a8 8 0 0 0-8-8m112-88h-24a8 8 0 0 0 0 16h24a8 8 0 0 0 0-16" />
                             </svg>
-                            <p class="text-[10px] sm:text-base font-numbers font-normal"><%= Math.abs(sunrise.getHours() - sunset.getHours())%><%= language.details_hr %> <%=Math.abs(sunrise.getMinutes() - sunset.getMinutes())%><%= language.details_min %></p>
+                            <p class="text-[10px] sm:text-base font-numbers font-normal"><%= Math.abs(sunrise.getHours() - sunset.getHours())%> <%= language.details_hr %> <%=Math.abs(sunrise.getMinutes() - sunset.getMinutes())%> <%=language.details_min %> </p>
                         </figure>
                         <figure class="dark:hidden relative flex justify-between items-center w-11/12 lg:w-96">
                             <%# Sun-Light Theme %>
@@ -245,19 +245,19 @@
                                 <path fill="#3F5781"
                                 d="M120 40V16a8 8 0 0 1 16 0v24a8 8 0 0 1-16 0m72 88a64 64 0 1 1-64-64a64.07 64.07 0 0 1 64 64m-16 0a48 48 0 1 0-48 48a48.05 48.05 0 0 0 48-48M58.34 69.66a8 8 0 0 0 11.32-11.32l-16-16a8 8 0 0 0-11.32 11.32Zm0 116.68l-16 16a8 8 0 0 0 11.32 11.32l16-16a8 8 0 0 0-11.32-11.32ZM192 72a8 8 0 0 0 5.66-2.34l16-16a8 8 0 0 0-11.32-11.32l-16 16A8 8 0 0 0 192 72m5.66 114.34a8 8 0 0 0-11.32 11.32l16 16a8 8 0 0 0 11.32-11.32ZM48 128a8 8 0 0 0-8-8H16a8 8 0 0 0 0 16h24a8 8 0 0 0 8-8m80 80a8 8 0 0 0-8 8v24a8 8 0 0 0 16 0v-24a8 8 0 0 0-8-8m112-88h-24a8 8 0 0 0 0 16h24a8 8 0 0 0 0-16" />
                             </svg>
-                            <p class="text-[10px] sm:text-base font-numbers font-normal"><%= Math.abs(sunrise.getHours() - sunset.getHours())%><%= language.details_hr %> <%=Math.abs(sunrise.getMinutes() - sunset.getMinutes())%><%= language.details_min %></p>
+                            <p class="text-[9.5px] sm:text-base font-numbers font-normal"><%= Math.abs(sunrise.getHours() - sunset.getHours())%> <%= language.details_hr %> <%=Math.abs(sunrise.getMinutes() - sunset.getMinutes())%><%= language.details_min %></p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                         <figure class="pt-2 w-11/12 flex justify-between items-center">
                             <%# Rise %>
                             <h3 class="font-body font-medium text-xs sm:text-base"><%= language.details_rise %></h3>
-                            <p class="text-[10px] sm:text-base font-numbers font-medium"><%= sunrise.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'}) %> </p>
+                            <p class="text-[9.5px] sm:text-base font-numbers font-medium"><%= sunrise.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'}) %> </p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                         <figure class="pt-2 w-11/12 flex justify-between items-center">
                             <%# Set %>
                             <h3 class="font-body font-medium text-xs sm:text-base"><%= language.details_set %></h3>
-                            <p class="text-[10px] sm:text-base font-numbers font-medium"><%= sunset.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'}) %> </p>
+                            <p class="text-[9.5px] sm:text-base font-numbers font-medium"><%= sunset.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'}) %> </p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                     </article>
@@ -266,26 +266,26 @@
                         <figure class="hidden relative dark:flex dark:justify-between dark:items-center w-11/12 lg:w-96">
                             <%# Moon-Dark Theme %>
                             <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 sm:w-10 sm:h-10" viewBox="0 0 256 256"> <path fill="#ff7a00" d="M233.54 142.23a8 8 0 0 0-8-2a88.08 88.08 0 0 1-109.8-109.8a8 8 0 0 0-10-10a104.84 104.84 0 0 0-52.91 37A104 104 0 0 0 136 224a103.09 103.09 0 0 0 62.52-20.88a104.84 104.84 0 0 0 37-52.91a8 8 0 0 0-1.98-7.98Zm-44.64 48.11A88 88 0 0 1 65.66 67.11a89 89 0 0 1 31.4-26A106 106 0 0 0 96 56a104.11 104.11 0 0 0 104 104a106 106 0 0 0 14.92-1.06a89 89 0 0 1-26.02 31.4Z"/></svg>
-                            <p class="text-[10px] sm:text-base font-numbers font-normal"><%= Math.abs(moonrise.getHours() - moonset.getHours())%><%= language.details_hr %> <%=Math.abs(moonrise.getMinutes() - moonset.getMinutes())%><%= language.details_min %></p>
+                            <p class="text-[9.5px] sm:text-base font-numbers font-normal"><%= Math.abs(moonrise.getHours() - moonset.getHours())%> <%= language.details_hr %> <%=Math.abs(moonrise.getMinutes() - moonset.getMinutes())%><%= language.details_min %></p>
 
                         </figure>
                         <figure class="dark:hidden relative flex justify-between items-center w-11/12 lg:w-96">
                             <%# Moon-Light Theme %>
                             <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 sm:w-10 sm:h-10" viewBox="0 0 256 256"><path fill="#3F5781" d="M233.54 142.23a8 8 0 0 0-8-2a88.08 88.08 0 0 1-109.8-109.8a8 8 0 0 0-10-10a104.84 104.84 0 0 0-52.91 37A104 104 0 0 0 136 224a103.09 103.09 0 0 0 62.52-20.88a104.84 104.84 0 0 0 37-52.91a8 8 0 0 0-1.98-7.98Zm-44.64 48.11A88 88 0 0 1 65.66 67.11a89 89 0 0 1 31.4-26A106 106 0 0 0 96 56a104.11 104.11 0 0 0 104 104a106 106 0 0 0 14.92-1.06a89 89 0 0 1-26.02 31.4Z"/></svg>
 
-                            <p class="text-[10px] sm:text-base font-numbers font-normal"><%= Math.abs(moonrise.getHours() - moonset.getHours())%><%= language.details_hr %> <%=Math.abs(moonrise.getMinutes() - moonset.getMinutes())%><%= language.details_min %></p>
+                            <p class="text-[9.5px] sm:text-base font-numbers font-normal"><%= Math.abs(moonrise.getHours() - moonset.getHours())%> <%= language.details_hr %> <%=Math.abs(moonrise.getMinutes() - moonset.getMinutes())%><%= language.details_min %></p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                         <figure class="pt-2 w-11/12 flex justify-between items-center">
                             <%# Rise %>
                             <h3 class="font-body font-medium text-xs sm:text-base"><%= language.details_rise %></h3>
-                            <p class="text-[10px] sm:text-base font-numbers font-medium"><%= moonrise.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'})%></p>
+                            <p class="text-[9.5px] sm:text-base font-numbers font-medium"><%= moonrise.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'})%></p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                         <figure class="pt-2 w-11/12 flex justify-between items-center">
                             <%# Set %>
                             <h3 class="font-body font-medium text-xs sm:text-base"><%= language.details_set %></h3>
-                            <p class="text-[10px] sm:text-base font-numbers font-medium"><%= moonset.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'})%></p>
+                            <p class="text-[9.5px] sm:text-base font-numbers font-medium"><%= moonset.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'})%></p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                     </article>
