--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -692,20 +692,12 @@ video {
   height: 3px;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .h-full {
   height: 100%;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-.h-64 {
-  height: 16rem;
 }
 
 .min-h-screen {
@@ -744,16 +736,16 @@ video {
   width: 83.333333%;
 }
 
-.w-52 {
-  width: 13rem;
-}
-
 .w-6 {
   width: 1.5rem;
 }
 
 .w-7 {
   width: 1.75rem;
+}
+
+.w-7\/12 {
+  width: 58.333333%;
 }
 
 .w-8 {
@@ -772,10 +764,6 @@ video {
   width: 100vw;
 }
 
-.w-48 {
-  width: 12rem;
-}
-
 .max-w-xs {
   max-width: 20rem;
 }
@@ -792,6 +780,34 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.animate-fade-in {
+  animation: fade-in 2s ease-in-out;
+}
+
+@keyframes slide-up {
+  0% {
+    transform: translateY(-24rem);
+  }
+
+  100% {
+    transform: translateX(h-auto);
+  }
+}
+
+.animate-slide-up {
+  animation: slide-up 0.3s ease-in alternate forwards;
 }
 
 .cursor-pointer {
@@ -1060,6 +1076,10 @@ video {
   font-size: 8px;
 }
 
+.text-\[9\.5px\] {
+  font-size: 9.5px;
+}
+
 .text-\[9px\] {
   font-size: 9px;
 }
@@ -1082,11 +1102,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 
 .font-bold {
@@ -1387,6 +1402,34 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:left-auto {
+    left: auto;
+  }
+
+  .sm\:right-0 {
+    right: 0px;
+  }
+
+  .sm\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .sm\:mt-32 {
+    margin-top: 8rem;
+  }
+
+  .sm\:block {
+    display: block;
+  }
+
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:h-1\/2 {
+    height: 50%;
+  }
+
   .sm\:h-10 {
     height: 2.5rem;
   }
@@ -1395,16 +1438,24 @@ video {
     height: 14rem;
   }
 
+  .sm\:h-60 {
+    height: 15rem;
+  }
+
   .sm\:h-72 {
     height: 18rem;
+  }
+
+  .sm\:h-8 {
+    height: 2rem;
   }
 
   .sm\:h-96 {
     height: 24rem;
   }
 
-  .sm\:h-60 {
-    height: 15rem;
+  .sm\:h-full {
+    height: 100%;
   }
 
   .sm\:w-10 {
@@ -1415,8 +1466,48 @@ video {
     width: 60%;
   }
 
+  .sm\:w-8 {
+    width: 2rem;
+  }
+
+  .sm\:w-96 {
+    width: 24rem;
+  }
+
   .sm\:w-full {
     width: 100%;
+  }
+
+  @keyframes slide-left {
+    0% {
+      transform: translateX(24rem);
+    }
+
+    100% {
+      transform: translateX(-w-96);
+    }
+  }
+
+  .sm\:animate-slide-left {
+    animation: slide-left 0.3s ease-in alternate forwards;
+  }
+
+  .sm\:justify-center {
+    justify-content: center;
+  }
+
+  .sm\:justify-around {
+    justify-content: space-around;
+  }
+
+  .sm\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .sm\:text-base {
@@ -1432,16 +1523,6 @@ video {
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .sm\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-
-  .sm\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 }
 
