--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="animate-fade-in">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
         integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
         <title>Weather Pulse</title>
     </head>
-    <body id="body" class="min-h-screen bg-cover bg-center relative bg-[url('/img/wp1.jpg')]">
+    <body id="body" class="min-h-screen bg-cover bg-center relative bg-[url('/img/wp1.jpg')] ">
         <header class="px-4 py-4 z-10 w-full bg-transparent absolute">
             <nav class="flex gap-4  justify-start max-container relative mx-auto" aria-label="main">
                 <a href="/">
@@ -24,7 +24,7 @@
             </section>
             <section
                 class="flex items-center justify-center h-full bg-transparent z-10 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full max-container ">
-                <form method="post" id="submit-city-name" class="sm:w-3/5 w-5/6 relative">
+                <form action="location" method="post" id="submit-city-name" class="sm:w-3/5 w-5/6 relative">
                     <button type="reset" class="absolute top-2.5 right-3 cursor-pointer">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path fill="currentColor"
