--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,31 +1,25 @@
 <%- include("partials/header.ejs") %>
 <main class="max-container">
-    <% if(locals.language && locals.data && locals.unit_symbols) {%>
+    <% if(locals.language && locals.unit_symbols && locals.data_today && locals.sunrise && locals.sunset && locals.moonrise && locals.moonset){%>
     <section>
         <article class="h-72 sm:h-96 flex flex-col dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
             <figure class="flex justify-between px-3 py-2 shadow-md text-sm sm:text-xl">
                 <figcaption class="font-title font-normal"><%= language.details_day %></figcaption>
                 <p class="font-numbers font-normal">
-                    <%
-                        let currentDate = new Date();
-                        let date = currentDate.toLocaleDateString([], {day: '2-digit',month:'2-digit'});
-                        let currentHour = currentDate.getHours();
-                        const tonight =Math.abs(24 - currentHour);
-                    %>
-                    <%= date %>
+                    <%= today %>
                 </p>
             </figure>
                 <figure class="flex flex-col justify-center items-center gap-3">
                     <figcaption class="flex flex-col items-center justify-center">
                         <div class="flex items-center justify-center w-14 h-16">
-                            <img src="https://openweathermap.org/img/wn/<%= data_daily.weather[0].icon %>@2x.png" alt="weather-icon"
+                            <img src="https://openweathermap.org/img/wn/<%= data_today.weather[0].icon %>@2x.png" alt="weather-icon"
                                 class=" w-full h-full">
                         </div>
                         <p style="text-shadow: 0px 4px 4px #00000040;" class="sm:text-lg font-numbers text-sm mb-2">
-                            <%= data_daily.temp.day.toFixed(0)%>°<span class="text-sm font-title"><%= unit_symbols.unit_degree%></span>
+                            <%= data_today.temp.day.toFixed(0)%>°<span class="text-sm font-title"><%= unit_symbols.unit_degree%></span>
                         </p>
                         <p style="text-shadow: 0px 4px 4px #00000040;" class="sm:text-lg text-xs font-body font-medium">
-                            <%= data_daily.weather[0].description.charAt(0).toUpperCase()%><%= data_daily.weather[0].description.slice(1)%>
+                            <%= data_today.weather[0].description.charAt(0).toUpperCase()%><%= data_today.weather[0].description.slice(1)%>
                         </p>
                     </figcaption>
                     <article class="grid grid-cols-2 w-full h-full px-5 gap-1 ">
@@ -34,7 +28,7 @@
                                 <%= language.details_feels_like %>
                             </figcaption>
                             <div>
-                                <%= data_daily.feels_like.day.toFixed(0)%>°<span class="text-[9px] font-title"><%= unit_symbols.unit_degree%></span>
+                                <%= data_today.feels_like.day.toFixed(0)%>°<span class="text-[9px] font-title"><%= unit_symbols.unit_degree%></span>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
                         </figure>
@@ -43,7 +37,7 @@
                                 <%= language.details_dew_point %>
                             </figcaption>
                             <div>
-                                <%= data_daily.dew_point.toFixed(0)%>°<span class="text-[9px] font-title"><%= unit_symbols.unit_degree%></span>
+                                <%= data_today.dew_point.toFixed(0)%>°<span class="text-[9px] font-title"><%= unit_symbols.unit_degree%></span>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
@@ -53,7 +47,7 @@
                                 <%= language.details_pressure %>
                             </figcaption>
                             <div>
-                                <%= data_daily.pressure.toFixed(0)%>
+                                <%= data_today.pressure.toFixed(0)%>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
@@ -63,7 +57,7 @@
                                 <%= language.details_wind_speed %>
                             </figcaption>
                             <div>
-                                <%= data_daily.wind_speed.toFixed(0)%> <span><%= unit_symbols.unit_speed%></span>
+                                <%= data_today.wind_speed.toFixed(0)%> <span><%= unit_symbols.unit_speed%></span>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
@@ -73,7 +67,7 @@
                                 <%= language.details_humidity %>
                             </figcaption>
                             <div>
-                                <%= data_daily.humidity.toFixed(0)%>%
+                                <%= data_today.humidity.toFixed(0)%>%
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
@@ -83,7 +77,7 @@
                                 <%= language.details_wind_gust%>
                             </figcaption>
                             <div>
-                                <%= data_daily.wind_gust.toFixed(0)%> <span><%= unit_symbols.unit_speed%></span>
+                                <%= data_today.wind_gust.toFixed(0)%> <span><%= unit_symbols.unit_speed%></span>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
@@ -93,7 +87,7 @@
                                 <%= language.details_uv%>
                             </figcaption>
                             <div>
-                                <%= data_daily.uvi.toFixed(0)%>
+                                <%= data_today.uvi.toFixed(0)%>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
 
@@ -103,7 +97,7 @@
                                 <%= language.details_clouds%>
                             </figcaption>
                             <div>
-                                <%= data_daily.clouds.toFixed(0)%>
+                                <%= data_today.clouds.toFixed(0)%>
                             </div>
                             <hr class="absolute w-[95%] sm:w-full bottom-0 border-gray-600 left-1 ">
                         </figure>
@@ -114,7 +108,7 @@
             <figure class="flex justify-between px-3 py-2 shadow-md text-sm sm:text-xl">
                 <figcaption class="font-title font-normal"><%= language.details_night %></figcaption>
                 <p class="font-numbers font-normal">
-                    <%= date %>
+                    <%= today %>
                 </p>
             </figure>
                 <figure class="flex flex-col justify-center items-center gap-3">
@@ -217,16 +211,6 @@
                 <figcaption class="font-title font-normal text-sm sm:text-xl"><%= language.details_sun %></figcaption>
                 <figcaption class="font-title font-normal text-sm sm:text-xl"><%= language.details_moon %></figcaption>
             </figure>
-                <% 
-                let unix_timestamp_sun_rise = data.daily[0].sunrise
-                let unix_timestamp_sun_set = data.daily[0].sunset
-                let sunrise = new Date(unix_timestamp_sun_rise * 1000);
-                let sunset = new Date(unix_timestamp_sun_set * 1000);
-                let unix_timestamp_moon_rise = data.daily[0].moonrise
-                let unix_timestamp_moon_set = data.daily[0].moonset
-                let moonrise = new Date(unix_timestamp_moon_rise * 1000);
-                let moonset = new Date(unix_timestamp_moon_set * 1000);
-                %>
                 <figure class="flex p-2">
                     <article class="w-1/2 flex flex-col items-center justify-between py-4">
                         <figure class="hidden relative dark:flex dark:justify-between dark:items-center w-11/12 lg:w-96">
