--- a/views/location.ejs
+++ b/views/location.ejs
@@ -1,39 +1,25 @@
 <%- include("partials/header.ejs") %>
-<% 
-    function addDays(date,days) 
-    {
-        var result=new Date(date); 
-        result.setDate(result.getDate() + days); 
-        result = result.toLocaleDateString([], {day: '2-digit',month:'2-digit'});
-        return result;
-    }
-%>
 <main class="max-container">
-        <% if(locals.language && locals.unit_symbols) {%>
+        <% if(locals.language && locals.unit_symbols && locals.data_current && locals.data_today && locals.data_tomorrow && locals.data_tonight) {%>
         <section>
             <article class="h-60 sm:h-72 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
                     <figcaption class="font-title font-normal sm:text-xl dark:text-primary-lgt"><%= language.current_weather %></figcaption>
                     <p class="font-numbers font-thin dark:text-primary-lgt sm:text-xl">
-                        <%
-                            let currentDate = new Date();
-                            let am_pm = currentDate.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'});
-                        %>
-                        <%= am_pm %>
+                        <%= hour %>
                     </p>
                 </figure>
-                <% if(locals.data) {%>
                 <figure class="flex flex-col justify-center items-center gap-3 sm:h-60">
                     <div class="flex items-center justify-center gap-2 ">
                         <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
-                            <img src="https://openweathermap.org/img/wn/<%= data.current.weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
+                            <img src="https://openweathermap.org/img/wn/<%= data_current.weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                         </div>
                         <div class="flex flex-col gap-1">
                             <figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data.current.weather[0].description.charAt(0).toUpperCase()%><%= data.current.weather[0].description.slice(1)%></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data_current.weather[0].description.charAt(0).toUpperCase()%><%= data_current.weather[0].description.slice(1)%></p>
                             </figcaption>
-                            <p style="text-shadow: 0px 4px 4px #00000020;" class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data.current.temp.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal sm:text-lg"><%= language.feels_like%> <%= data.current.feels_like.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
+                            <p style="text-shadow: 0px 4px 4px #00000020;" class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data_current.temp.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal sm:text-lg"><%= language.feels_like%> <%= data_current.feels_like.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
                         </div>
                     </div>
                     <form method="post">
@@ -42,30 +28,25 @@
                         </button>
                     </form>
                 </figure>
-                <% } %>
             </article>
             <article class="h-60 sm:h-72 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
                     <figcaption class="font-title font-normal sm:text-xl dark:text-primary-lgt"><%= language.todays_weather_forecast %></figcaption>
                     <p class="font-numbers font-thin dark:text-primary-lgt sm:text-xl">
-                        <%
-                            let date = currentDate.toLocaleDateString([], {day: '2-digit',month:'2-digit'});
-                        %>
-                        <%= date %>
+                        <%= today %>
                     </p>
                 </figure>
-                <% if(locals.data) {%>
                     <figure class="flex flex-col justify-center items-center gap-3 sm:h-60">
                         <div class="flex items-center justify-center gap-2 ">
                             <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
-                                <img src="https://openweathermap.org/img/wn/<%= data.daily[0].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
+                                <img src="https://openweathermap.org/img/wn/<%= data_today.weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                             </div>
                             <div class="flex flex-col gap-1">
                                 <figcaption>
-                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data.daily[0].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[0].weather[0].description.slice(1)%></p>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data_today.weather[0].description.charAt(0).toUpperCase()%><%= data_today.weather[0].description.slice(1)%></p>
                                 </figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000020;" class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data.daily[0].temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <%= data.daily[0].feels_like.day.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000020;" class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data_today.temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <%= data_today.feels_like.day.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
                             </div>
                         </div>
                         <form method="post">
@@ -74,31 +55,25 @@
                             </button>
                         </form>
                     </figure>
-                    <% } %>
             </article>
             <article class="h-60 sm:h-72 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
                     <figcaption class="font-title font-normal sm:text-xl dark:text-primary-lgt"><%= language.tonights_weather_forecast %></figcaption>
                     <p class="font-numbers font-thin dark:text-primary-lgt sm:text-xl">
-                        <% 
-                            let currentHour = currentDate.getHours();
-                            const tonight =Math.abs(24 - currentHour);
-                        %>
-                        <%= date %>
+                        <%= today %>
                     </p>
                 </figure>
-                <% if(locals.data) {%>
                     <figure class="flex flex-col justify-center items-center gap-3 sm:h-60">
                         <div class="flex items-center justify-center gap-2 ">
                             <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
-                                <img src="https://openweathermap.org/img/wn/<%= data.hourly[tonight].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
+                                <img src="https://openweathermap.org/img/wn/<%= data_tonight.weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                             </div>
                             <div class="flex flex-col gap-1">
                                 <figcaption>
-                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data.hourly[tonight].weather[0].description.charAt(0).toUpperCase()%><%= data.hourly[tonight].weather[0].description.slice(1)%></p>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data_tonight.weather[0].description.charAt(0).toUpperCase()%><%= data_tonight.weather[0].description.slice(1)%></p>
                                 </figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000020;" class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data.daily[0].temp.night.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <%= data.daily[0].feels_like.night.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000020;" class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data_today.temp.night.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <%= data_today.feels_like.night.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
                             </div>
                         </div>
                         <form method="post">
@@ -107,27 +82,25 @@
                             </button>
                         </form>
                     </figure>
-                    <% } %>
             </article>
             <article class="h-60 sm:h-72 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
                     <figcaption class="font-title font-normal sm:text-xl dark:text-primary-lgt"><%= language.tomorrow_weather_forecast %></figcaption>
                     <p class="font-numbers font-thin dark:text-primary-lgt sm:text-xl">
-                        <%= addDays(currentDate,1) %>
+                        <%= tomorrow %>
                     </p>
                 </figure>
-                <% if(locals.data) {%>
                     <figure class="flex flex-col justify-center items-center gap-3 sm:h-60">
                         <div class="flex items-center justify-center gap-2 ">
                             <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
-                                <img src="https://openweathermap.org/img/wn/<%= data.daily[1].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
+                                <img src="https://openweathermap.org/img/wn/<%= data_tomorrow.weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                             </div>
                             <div class="flex flex-col gap-1">
                                 <figcaption>
-                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data.daily[1].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[1].weather[0].description.slice(1)%></p>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data_tomorrow.weather[0].description.charAt(0).toUpperCase()%><%= data_tomorrow.weather[0].description.slice(1)%></p>
                                 </figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000040;"class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data.daily[1].temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm  font-body font-normal pl-2"><%= language.feels_like %> <%= data.daily[1].feels_like.day.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;"class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data_tomorrow.temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm  font-body font-normal pl-2"><%= language.feels_like %> <%= data_tomorrow.feels_like.day.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
                             </div>
                         </div>
                         <form method="post">
@@ -136,7 +109,6 @@
                             </button>
                         </form>
                     </figure>
-                    <% } %>
             </article>
         </section>
         <% } %>
