--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,11 +12,11 @@
         <nav class="p-2 opacity-75" aria-label="footer">
             <ul class="flex flex-row gap-2 justify-center items-center px-10">
                 <li class="sm:text-base text-[7px] whitespace-nowrap hover:opacity-25 cursor-pointer"><%= language.footer_terms %></li>
-                <div class="border-l-2 rounded-full h-3 dark:border-icons-drk border-icons-lgt "></div>
+                <li class="border-l-2 rounded-full h-3 dark:border-icons-drk border-icons-lgt "></li>
                 <li class="sm:text-base text-[7px] whitespace-nowrap hover:opacity-25 cursor-pointer"><%= language.footer_privacy %></li>
-                <div class="border-l-2 rounded-full h-3 dark:border-icons-drk border-icons-lgt  "></div>
+                <li class="border-l-2 rounded-full h-3 dark:border-icons-drk border-icons-lgt  "></li>
                 <li class="sm:text-base text-[7px] whitespace-nowrap hover:opacity-25 cursor-pointer"><%= language.footer_contact %></li>
-                <div class="border-l-2 rounded-full h-3 dark:border-icons-drk border-icons-lgt "></div>
+                <li class="border-l-2 rounded-full h-3 dark:border-icons-drk border-icons-lgt "></li>
                 <li class="sm:text-base text-[7px] whitespace-nowrap hover:opacity-25 cursor-pointer"><%= language.footer_cookie %></li>
             </ul>
         </nav>
