--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -64,22 +64,22 @@
                     </li>
                 </ul>
                 <form action="location" method="post" id="submit-city-name" class="w-7/12 relative hidden sm:block">
-                    <button type="reset" class="absolute top-2.5 right-3 cursor-pointer ">
+                    <button aria-label="clean search text" type="reset" class="absolute top-2.5 right-3 cursor-pointer ">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path fill="currentColor"
                                 d="m6.4 18.308l-.708-.708l5.6-5.6l-5.6-5.6l.708-.708l5.6 5.6l5.6-5.6l.708.708l-5.6 5.6l5.6 5.6l-.708.708l-5.6-5.6l-5.6 5.6Z" />
                         </svg>
                     </button>
-                    <input id="city_input" type="text" name="city_name" placeholder="Search" required
+                    <input aria-label="search text area" id="city_input" type="text" name="city_name" placeholder="Search" required
                         class="py-2.5 px-12 w-full rounded-md  dark:bg-primary-drk bg-primary-lgt">
-                    <button class="absolute left-3 top-2.5  cursor-pointer z-10 " onclick="sendForm">
+                    <button aria-label="submit search text" class="absolute left-3 top-2.5  cursor-pointer z-10 " onclick="sendForm">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path fill="currentColor"
                                 d="M9.5 4a6.5 6.5 0 0 1 6.5 6.5c0 1.62-.59 3.1-1.57 4.23l5.65 5.65l-.71.71l-5.65-5.65A6.469 6.469 0 0 1 9.5 17A6.5 6.5 0 0 1 3 10.5A6.5 6.5 0 0 1 9.5 4m0 1A5.5 5.5 0 0 0 4 10.5A5.5 5.5 0 0 0 9.5 16a5.5 5.5 0 0 0 5.5-5.5A5.5 5.5 0 0 0 9.5 5Z" />
                         </svg>
                     </button>
                 </form>
-                <button id="hamburger-button" class="relative h-8 w-8 px-4 cursor-pointer text-3xl flex justify-center items-center" onclick="toggleMenu()">
+                <button aria-label="hamburger menu" id="hamburger-button" class="relative h-8 w-8 px-4 cursor-pointer text-3xl flex justify-center items-center" onclick="toggleMenu()">
                     <div
                         class="absolute top-4 -mt-0.5 h-[3px] w-8 rounded bg-primary-lgt transition-all duration-500 before:absolute before:h-[3px] before:w-6 before:-translate-x-4 before:-translate-y-2 before:rounded before:bg-primary-lgt before:transition-all before:duration-500 before:content-[''] after:absolute after:h-[3px] after:w-7 after:-translate-x-4 after:translate-y-2 after:rounded after:bg-primary-lgt after:transition-all after:duration-500 after:content-['']">
                     </div>
@@ -97,7 +97,7 @@
                         <img src="img/logo.png" alt="brand-logo" class="bg-center w-7 h-7 sm:w-8 sm:h-8" />
                     </a>
                 </div>
-                <button id="close-button"
+                <button aria-label="close mobile navbar" id="close-button"
                     class="relative h-8 w-8 px-4 cursor-pointer text-3xl flex justify-center items-center" onclick="toggleMenu()">
                     <div
                         class="before:absolute before:h-[3px] before:w-8 before:-translate-x-4 before:-translate-y-0 before:rounded before:bg-primary-lgt before:content-[''] before:rotate-45 after:absolute after:h-[3px] after:w-8 after:-translate-x-4 after:translate-y-0 after:rounded after:bg-primary-lgt after:content-[''] after:-rotate-45">
@@ -108,15 +108,15 @@
             <article class="py-2 flex flex-col gap-4 items-center w-full mb-4 sm:justify-center sm:hidden">
                 <%# Search bar %>
                     <form action="location" method="post" id="submit-city-name" class="w-5/6 relative">
-                        <button type="reset" class="absolute top-2.5 right-3 cursor-pointer ">
+                        <button aria-label="clean search text mobile" type="reset" class="absolute top-2.5 right-3 cursor-pointer ">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path fill="currentColor"
                                     d="m6.4 18.308l-.708-.708l5.6-5.6l-5.6-5.6l.708-.708l5.6 5.6l5.6-5.6l.708.708l-5.6 5.6l5.6 5.6l-.708.708l-5.6-5.6l-5.6 5.6Z" />
                             </svg>
                         </button>
-                        <input id="city_input" type="text" name="city_name" placeholder="Search" required
+                        <input aria-label="search text area mobile" id="city_input" type="text" name="city_name" placeholder="Search" required
                             class="py-2.5 px-12 w-full rounded-md  dark:bg-primary-drk bg-primary-lgt">
-                        <button class="absolute left-3 top-2.5  cursor-pointer z-10 " onclick="sendForm">
+                        <button aria-label="submit search text mobile" class="absolute left-3 top-2.5  cursor-pointer z-10 " onclick="sendForm">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path fill="currentColor"
                                     d="M9.5 4a6.5 6.5 0 0 1 6.5 6.5c0 1.62-.59 3.1-1.57 4.23l5.65 5.65l-.71.71l-5.65-5.65A6.469 6.469 0 0 1 9.5 17A6.5 6.5 0 0 1 3 10.5A6.5 6.5 0 0 1 9.5 4m0 1A5.5 5.5 0 0 0 4 10.5A5.5 5.5 0 0 0 9.5 16a5.5 5.5 0 0 0 5.5-5.5A5.5 5.5 0 0 0 9.5 5Z" />
@@ -132,7 +132,7 @@
                 <figure class="sm:text-lg">
                     <figcaption> 
                         <form method="post">
-                            <button formaction="home" type="submit" class="text-primary-lgt">
+                            <button aria-label="select language button" formaction="home" type="submit" class="text-primary-lgt">
                                 <%= language.nav_home %>
                             </button>
                         </form>
