--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <script defer src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
         integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <title>Weather Pulse</title>
@@ -17,7 +18,7 @@
     <header class="px-4 py-4 z-10 w-full bg-transparent absolute">
         <nav class="flex gap-4 justify-start max-container relative mx-auto" aria-label="main">
             <h1 class="text-white font-title font-semibold sm:text-lg text-sm">Weather Pulse</h1>
-            <img src="img/logo.png" width="24" height="24" alt="brand-logo" class="bg-center" />
+            <img src="img/logo.webp" width="24" height="24" alt="brand-logo" class="bg-center" />
         </nav>
     </header>
     <main class="min-h-screen relative">
