--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <title>Weather Pulse</title>
 </head>
@@ -53,7 +54,7 @@
                 <ul class="flex justify-center items-center gap-1 ">
                     <li  class="w-6 h-6 flex justify-center items-center">
                         <a href="/">
-                            <img src="img/logo.png" alt="brand-logo" />
+                            <img src="img/logo.webp" alt="brand-logo" />
                         </a>
                     </li>
                     <li class="h-8 flex justify-center items-center">
@@ -94,7 +95,7 @@
                         <h1 class=" font-title font-semibold sm:text-lg text-sm text-primary-lgt">Weather Pulse</h1>
                     </a>
                     <a href="/" class="">
-                        <img src="img/logo.png" alt="brand-logo" class="bg-center w-7 h-7 sm:w-8 sm:h-8" />
+                        <img src="img/logo.webp" alt="brand-logo" class="bg-center w-7 h-7 sm:w-8 sm:h-8" />
                     </a>
                 </div>
                 <button aria-label="close mobile navbar" id="close-button"
